--- a/yesican.html
+++ b/yesican.html
@@ -13,7 +13,7 @@
 <div class="grid">
   <div class="card"><h2>配信</h2><p>1530固定時間、火・水は定休日。</p></div>
   <div class="card"><h2>歌</h2><p>投稿頻度は負けません。リクエストもコラボも大歓迎。</p></div>
-  <div class="card"><h2>絵</h2><p>依頼受付中。<br>立ち絵半身最低限額4000円から。</p></div>
+  <div class="card"><h2>絵</h2><p>依頼受付中。<br><a href="https://gainenull.org/illustlist">サンプルと予算目安ページ</a></p></div>
   <div class="card"><h2>動画</h2><p>依頼受付中、勉強中です。</p></div>
   <div class="card"><h2>MIX</h2><p>依頼受付中、実績400以上。<br>フルコーラス最低限額4000円から。</p></div>
   <div class="card"><h2>コラボ</h2><p>お気軽にお問い合わせくださいませ。</p></div>
