Change background color in illustlist.html

--- a/illustlist.html
+++ b/illustlist.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="assets/style.css">
   <style>
-    :root{--bg:#FFF8E7;
+    :root{--bg:#FAF7F2;
       --accent:#FF91AF;
       --line:#E8DFD6;
       --panel: rgba(255,255,255,.92);
