--- a/yesican.html
+++ b/yesican.html
@@ -15,7 +15,7 @@
   <div class="card"><h2>歌</h2><p>投稿頻度は負けません。リクエストもコラボも大歓迎。</p></div>
   <div class="card"><h2>絵</h2><p>依頼受付中。<br><a href="https://gainenull.org/illustlist">サンプルと予算目安ページ</a></p></div>
   <div class="card"><h2>動画</h2><p>依頼受付中、勉強中ゆえ予算目安のページはありません。</p></div>
-  <div class="card"><h2>MIX</h2><p>依頼受付中、実績400以上。<br><a href="https://gainenull.org/illustlist">サンプルと予算目安ページ</a></p></div>
+  <div class="card"><h2>MIX</h2><p>依頼受付中、実績400以上。<br><a href="https://gainenull.org/mixlist">サンプルと予算目安ページ</a></p></div>
   <div class="card"><h2>コラボ</h2><p>お気軽にお問い合わせくださいませ。</p></div>
   <div class="card"><h2>支援</h2><p><a href="https://null-gaine.fanbox.cc/">コチラ</a>と<a href="https://buymeacoffee.com/gaine.null">コチラ</a>で可能。お気持ちで嬉しいです。</p></div>
 </div>
