--- a/utamihon.html
+++ b/utamihon.html
@@ -325,6 +325,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 ゴーゴー幽霊船<br/>
 ゴーストルール<br/>
 <a href="https://www.youtube.com/watch?v=_ePdFHY9IHg">ゴー・トゥ・大都会</a><br/>
+<a href="https://www.youtube.com/watch?v=wY_ammkw_Xs">氷の上に立つように</a><br/>
 極彩色<br/>
 <a href="https://www.youtube.com/watch?v=azXZs3FYMOg">ココロ</a><br/>
 <a href="https://www.youtube.com/watch?v=yDitQ831BGQ">心做し</a><br/>
@@ -545,9 +546,11 @@ siGrE<br/>
             <h2 class="body-title">は行</h2>
 <div class="body-content">
 <h3>は</h3><br/>
+バースデイズ<br/>
 <a href="https://www.youtube.com/watch?v=jVLtddcEzS0">拝啓、何者にもなれなかった僕へ。</a><br/>
 廃都アトリエスタにて<br/>
 敗北の少年<br/>
+<a href="https://www.youtube.com/watch?v=g-W7UyGXWPw">ハウトゥー世界征服</a><br/>
 <a href="https://www.youtube.com/watch?v=DdYIhkrpYDo">はぐ</a><br/>
 <a href="https://www.youtube.com/watch?v=yC_iEV1YW8k">バグ</a><br/>
 <a href="https://www.youtube.com/watch?v=jeRvHZ3iyJY">化けの花</a><br/>
@@ -563,6 +566,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=FuCG3NH_JRU">抜錨</a><br/>
 <a href="https://www.youtube.com/watch?v=Szqxd-yyWug">花に風</a><br/>
 <a href="https://www.youtube.com/watch?v=lz10LdfpvFY">花丸◎日和！</a><br/>
+<a href="https://www.youtube.com/watch?v=a2J3afYDpQ0">花結び</a><br/>
 <a href="https://www.youtube.com/watch?v=6Q1-BoBK79M">花を唄う</a><br/>
 <a href="https://www.youtube.com/watch?v=ZUxp4e3DBHI">パノプティコン</a><br/>
 パプリカ<br/>
@@ -598,7 +602,7 @@ Hello､ 星を数えて<br/>
 <a href="https://www.youtube.com/watch?v=NirA6KWIGrg">フェレス</a><br/>
 <a href="https://www.youtube.com/watch?v=gRHO14O3ZY4">フォニイ</a><br/>
 <a href="https://www.youtube.com/watch?v=gJ-p1tGcrjA">不気味</a><br/>
-双色<br/>
+<a href="https://www.youtube.com/watch?v=_avWQNWDzUw">双色</a><br/>
 フタリボシ<br/>
 プライド革命<br/>
 <a href="https://www.youtube.com/watch?v=-qLkN88ey9A">ブラインド</a><br/>
@@ -700,9 +704,10 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
 <h3>ゆ</h3><br/>
 勇気のReason<br/>
-<a href="https://www.youtube.com/watch?v=6oYutZUgRAI">故にユーエンミー</a><br/>
 夕景イエスタデイ<br/>
 <a href="https://www.youtube.com/watch?v=J4as-TqBlk0">幽霊東京</a><br/>
+<a href="https://www.youtube.com/watch?v=6oYutZUgRAI">故にユーエンミー</a><br/>
+<a href="https://www.youtube.com/watch?v=iSE7WNoZS-0">征け</a><br/>
 指切り<br/>
 夢なき夢は夢じゃない<br/>
 ゆるふわ樹海ガール<br/>
@@ -854,7 +859,7 @@ into the New World<br/>
 <a href="https://www.youtube.com/watch?v=qZrk9Xc-Xtw">KING</a><br/>
 kiss<br/>
 <a href="https://www.youtube.com/watch?v=f1dO_H4VkFg">Komm, süsser Tod</a><br/>
-Jane Doe<br/>
+<a href="https://www.youtube.com/watch?v=Cf_vkjVHBuk">Jane Doe</a><br/>
 <a href="https://www.youtube.com/watch?v=R3TYN9PdcmU">Journey</a><br/>
 <a href="https://www.youtube.com/watch?v=Q2sqrnDMtW0">JUMPIN’ OVER !</a><br/>
 just be friends<br/>
