--- a/illustlist.html
+++ b/illustlist.html
@@ -328,7 +328,7 @@
 <div class="links" style="margin-top:18px">
   <a class="btnLink" href="yesican.html"><span class="dot" aria-hidden="true"></span>戻る</a>
   <a class="btnLink" href="price-video.html"><span class="dot" aria-hidden="true"></span>動画プランのページへ</a>
-  <a class="btnLink" href="price-mix.html"><span class="dot" aria-hidden="true"></span>MIXプランのページへ</a>
+  <a class="btnLink" href="mixlist.html"><span class="dot" aria-hidden="true"></span>MIXプランのページへ</a>
 </div>
 
   
