Add Pink Marshmallow and Cherry Blossom colors

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -344,6 +344,7 @@ const milk = [
   {name:"Cappuccino Foam",hex:"#F6F3E8",meta:"PANTONE 11-0109 TSX",memo:"ほろ苦さに浮かぶ泡のヘイロー。"},
   {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
   {name:"Marshmallow",hex:"#F1EDE5",pantone:"PANTONE 11-4300 TCX",memo:"優しさの詰め合わせ。"},
+  {name:"Pink Marshmallow",hex:"#F8E0E8",pantone:"PANTONE 12-2907 TCX",memo:"優しさに可愛さを足して。"},
   {name:"Peach Mousse",hex:"#FFCDB5",meta:"PANTONE 12-1121 TCX",memo:"優しさのこもった泡立て。"},
   {name:"Caramel Cream",hex:"#F4BA94",pantone:"PANTONE 13-1022 TCX",memo:"天井の明かりは飴色。"},
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"}, 
@@ -383,10 +384,11 @@ const tea = [
   {name:"Herbal Garden",hex:"#9CAD60",meta:"PANTONE 15-0336 TCX",memo:"本当にありそうなお茶の名前。"},  
   {name:"Peppermint",hex:"#619364",meta:"PANTONE 16-6329 TCX",memo:"一杯でスッキリ解ける夜のわだかまり。"},
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
-  {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
   {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
   {name:"Lemon Grass",hex:"#CBC388",meta:"PANTONE 12-0626 TCX",memo:"爽やかな朝の味。"},
   {name:"Sweet Lavender",hex:"#999BC1",meta:"PANTONE 16-3931 TCX",memo:"夜明け空からの軽い癒し。"},
+  {name:"Cherry Blossom",hex:"#F7CEE0",meta:"PANTONE 13-3207 TCX",memo:"お馴染みの春色。"},
+  {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
   {name:"Hibiscus",hex:"#DD3848",meta:"PANTONE 18-1762 TCX",memo:"真夏の鮮やかで甘い花。"},
   {name:"Rooibos Tea",hex:"#A23C26",meta:"PANTONE 18-1355 TCX",memo:"陽に透かした赤。"}
 ];
@@ -395,18 +397,17 @@ const ice = [
   {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"すべての基本、だからこそ美味しい。"},
   {name:"Strawberry Ice",hex:"#E78B90",meta:"PANTONE 16-1720 TCX",memo:"さわやか可愛いのレシピ。"},
   {name:"Granita",hex:"#97204B",meta:"PANTONE 19-2039 TCX",memo:"所謂クラシック。"},
+  {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
   {name:"Apricot Sherbet",hex:"#E6BD91",meta:"PANTONE 13-1031 TCX",memo:"春の実と氷の巡り会わせ。"},
   {name:"Pear Sorbet",hex:"#E0D7B4",meta:"PANTONE 11-0615 TCX",memo:"梨の甘さを引き立てる。"},
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
-  {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
-  {name:"Cherry Blossom",hex:"#F7CEE0",meta:"PANTONE 13-3207 TCX",memo:"お馴染みの春色。"},
-  {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
-  {name:"Lollipop",hex:"#BB1A36",meta:"PANTONE 18-1764 TCX",memo:"思い出に残ってるあの味。"},
-  {name:"Bonbon",hex:"#E09BBD",meta:"PANTONE 15-2213 TCX",memo:"一口一口違う甘さを。"},
-  {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
   {name:"Rum Raisin", hex:"#583432", meta:"PANTONE 19-1321 TCX", memo:"冷んやりした大人の味。"},
   {name:"Grape Compote",hex:"#63516D",meta:"PANTONE 18-3513 TCX",memo:"その「み」を煮込んだ先には。"},
+  {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
+  {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
+  {name:"Lollipop",hex:"#BB1A36",meta:"PANTONE 18-1764 TCX",memo:"思い出に残ってるあの味。"},
+  {name:"Bonbon",hex:"#E09BBD",meta:"PANTONE 15-2213 TCX",memo:"一口一口違う甘さを。"},
   {name:"Pink Lemonade",hex:"#DB6580",meta:"PANTONE 16-1735 TCX",memo:"ピンクってだけで少し特別になる。"},
   {name:"Peach Nectar",hex:"#EBA790",meta:"PANTONE 14-1228 TCX",memo:"神の飲み物と言われるほどの味でしょう。"},
   {name:"Peach Melba",hex:"#E8AFA2",meta:"PANTONE 14-1418 TCX",memo:"違う甘さで勝負します。"},
@@ -421,14 +422,14 @@ const dessert = [
   {name:"Butterscotch", hex:"#E19740", meta:"PANTONE 15-1147 TCX", memo:"フォークで掬う手の温もり。"},
   {name:"Blueberry Pancake",hex:"#1C395C",meta:"PANTONE 19-4119 TSX",memo:"手軽なほど難しい。"},
   {name:"Ginger Bread",hex:"#9B5E3E",pantone:"PANTONE 18-1244 TCX",memo:"焼きたての角の香り。"},
+  {name:"Pecan Pie",hex:"#7B5947",meta:"PANTONE 18-1125 TCX",memo:"分け与える香ばしさ。"},
   {name:"Flan",hex:"#F6E3B3",meta:"PANTONE 11-0619 TCX",memo:"お口の中蕩ける真昼。"},
   {name:"Petit Four",hex:"#88C1D3",pantone:"PANTONE 14-4516 TCX",memo:"切り分けた甘さ。"},
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
   {name:"Ganache",hex:"#33292A",pantone:"PANTONE 19-1018 TCX",memo:"重く、静かに艶がある。"},
+  {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
   {name:"Pink Flambé",hex:"#C34A70",meta:"PANTONE 18-2133 TCX",memo:"燃やす勢いが素敵な味になるんだって。"},
   {name:"Pink Taffy",hex:"#FF92AF",meta:"PANTONE 14-1816 TCX",memo:"噛みしめる甘さ。"},
-  {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
-  {name:"Pecan Pie",hex:"#7B5947",meta:"PANTONE 18-1125 TCX",memo:"分け与える香ばしさ。"},
   {name:"Peach Pie",hex:"#FFA88B",meta:"PANTONE 14-1325 TSX",memo:"一かけらのお昼。"},
   {name:"Peach Cobbler",hex:"#FFB080",meta:"PANTONE 14-1231 TPX",memo:"ちょうどよく焼けた昼下がり。"}
 ];
