--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -428,7 +428,7 @@ const dessert = [
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
   {name:"Ganache",hex:"#33292A",pantone:"PANTONE 19-1018 TCX",memo:"重く、静かに艶がある。"},
   {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
-  {name:"Pink Flambé",hex:"#C34A70",meta:"PANTONE 18-2133 TCX",memo:"燃やす勢いが素敵な味になるんだって。"},
+  {name:"Pink Flambé",hex:"#C34A70",meta:"PANTONE 18-2133 TCX",memo:"燃やす勢いが味になるんだって。"},
   {name:"Pink Taffy",hex:"#FF92AF",meta:"PANTONE 14-1816 TCX",memo:"噛みしめる甘さ。"},
   {name:"Peach Pie",hex:"#FFA88B",meta:"PANTONE 14-1325 TSX",memo:"一かけらのお昼。"},
   {name:"Peach Cobbler",hex:"#FFB080",meta:"PANTONE 14-1231 TPX",memo:"ちょうどよく焼けた昼下がり。"}
