Refine memo descriptions for colors
Updated the memo descriptions for 'Pink Lemonade' and 'Peach Nectar' to be more concise.

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -408,8 +408,8 @@ const ice = [
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
   {name:"Lollipop",hex:"#BB1A36",meta:"PANTONE 18-1764 TCX",memo:"思い出に残ってるあの味。"},
   {name:"Bonbon",hex:"#E09BBD",meta:"PANTONE 15-2213 TCX",memo:"一口一口違う甘さを。"},
-  {name:"Pink Lemonade",hex:"#DB6580",meta:"PANTONE 16-1735 TCX",memo:"ピンクってだけで少し特別になる。"},
-  {name:"Peach Nectar",hex:"#EBA790",meta:"PANTONE 14-1228 TCX",memo:"神の飲み物と言われるほどの味でしょう。"},
+  {name:"Pink Lemonade",hex:"#DB6580",meta:"PANTONE 16-1735 TCX",memo:"ピンクってだけで少し特別。"},
+  {name:"Peach Nectar",hex:"#EBA790",meta:"PANTONE 14-1228 TCX",memo:"神の飲み物と言われるほどの。"},
   {name:"Peach Melba",hex:"#E8AFA2",meta:"PANTONE 14-1418 TCX",memo:"違う甘さで勝負します。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"完璧な桃味のやさしさ。"}
 ];
