--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -341,7 +341,7 @@ const milk = [
   {name:"Crème Brûlée",hex:"#E4D7C5",pantone:"PANTONE 13-1006 TPG",memo:"光が焦がすミルクの縁。"},
   {name:"Oat Milk",hex:"#CEC4BA",meta:"PANTONE 13-0003 TCX",memo:"雨の窓と本の紙。"},
   {name:"Almond Milk",hex:"#E7E2DA",pantone:"PANTONE 12-4301 TCX",memo:"音のしないやさしさ。"},
-  {name:"Cappuccino Foam",hex:"#F6F3E8",meta:"PANTONE 11-0109 TSX",memo:"ほろ苦さに浮かぶ泡のヘイロー。"},
+  {name:"Cappuccino Foam",hex:"#F6F3E8",meta:"PANTONE 11-0109 TSX",memo:"ほろ苦さに浮かぶ泡ヘイロー。"},
   {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
   {name:"Marshmallow",hex:"#F1EDE5",pantone:"PANTONE 11-4300 TCX",memo:"優しさの詰め合わせ。"},
   {name:"Pink Marshmallow",hex:"#F8E0E8",pantone:"PANTONE 12-2907 TCX",memo:"優しさに可愛さを足して。"},
@@ -382,7 +382,7 @@ const tea = [
   {name:"Matcha",hex:"#9CAF88",meta:"RGB(156,175,136)",memo:"深呼吸みたいな緑。"},
   {name:"Jasmine Green",hex:"#7FC844",meta:"PANTONE 15-0545 TCX",memo:"気休めの黄緑一杯。"},
   {name:"Herbal Garden",hex:"#9CAD60",meta:"PANTONE 15-0336 TCX",memo:"本当にありそうなお茶の名前。"},  
-  {name:"Peppermint",hex:"#619364",meta:"PANTONE 16-6329 TCX",memo:"一杯でスッキリ解ける夜のわだかまり。"},
+  {name:"Peppermint",hex:"#619364",meta:"PANTONE 16-6329 TCX",memo:"一杯で解ける夜のわだかまり。"},
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
   {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
   {name:"Lemon Grass",hex:"#CBC388",meta:"PANTONE 12-0626 TCX",memo:"爽やかな朝の味。"},
@@ -447,7 +447,7 @@ const cocktail = [
 ];
 
 const cosmic = [
-  {name:"Cosmic Latte",hex:"#FFF8E7",meta:"RGB(255,248,231)",memo:"宇宙の平均色。薄いミルクの白昼夢。"},
+  {name:"Cosmic Latte",hex:"#FFF8E7",meta:"RGB(255,248,231)",memo:"宇宙の平均色。薄い白昼夢。"},
   {name:"Silence",hex:"#F6EFE6",pantone:"PANTONE 11-0610 TSX",memo:"音のない白。"},
   {name:"Afterglow",hex:"#F3E6C8",pantone:"PANTONE 11-0510 TCX",memo:"薄明の光。"},
   {name:"Moon Mist",hex:"#80817D",meta:"PANTONE 18-4105 TCX",memo:"朧月の夜。"}
