Update memo for Vanilla Ice entry

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -394,7 +394,7 @@ const tea = [
 ];
 
 const ice = [
-  {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"すべての基本、だからこそ美味しい。"},
+  {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"すべての基本、だからこそ。"},
   {name:"Strawberry Ice",hex:"#E78B90",meta:"PANTONE 16-1720 TCX",memo:"さわやか可愛いのレシピ。"},
   {name:"Granita",hex:"#97204B",meta:"PANTONE 19-2039 TCX",memo:"所謂クラシック。"},
   {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
