Add list of links to links.html

--- a/links.html
+++ b/links.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <div id="header"></div>
-  <main id="main"></main>
+  <ul class="list">
+  <li><a href="https://gainenull.org/yitori">ニトリ</a></li>
+  <li><a href="https://gainenull.org/nagamebana">詠花</a></li>
+  <li><a href="https://gainenull.org/meitanteiq">骵温</a></li>
+</ul>
   <div id="footer"></div>
 
   <script>
