--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,12 @@
   <p class="note">個人情報は医療目的にのみ使用します。</p>
 </div>
 
-
+<h2>よく使うページ</h2>
+<div class="grid">
+  <div class="card"><strong><a href="https://gainenull.org/hours">外来案内</a></strong><p class="note">受付 8:30–11:30（初診）／ 8:30–16:30（再診）</p></div>
+  <div class="card"><strong><a href="https://gainenull.org/cafepalette">カフェ・パレット</a></strong><p class="note">1階のカフェサイトに繋ぎます。</p></div>
+  <div class="card"><strong><a href="https://gainenull.org/yesican">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
+</div>
 
   
   <div id="footer"></div>
