Update card content in links.html

--- a/links.html
+++ b/links.html
@@ -11,9 +11,9 @@
   
   <h2>エンティティー</h2>
 <div class="grid">
-  <div class="card"><strong><a href="https://gainenull.org/yitori">ニトリ</a></strong><p class="note">受付 8:30–11:30（初診）／ 8:30–16:30（再診）</p></div>
-  <div class="card"><strong><a href="https://gainenull.org/nagamebana">詠花</a></strong><p class="note">1階のカフェサイトに繋ぎます。</p></div>
-  <div class="card"><strong><a href="https://gainenull.org/meitanteiq">骵温</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
+  <div class="card"><strong><a href="https://gainenull.org/yitori">ニトリ</a></strong><p class="note">直接助力下さった方々</p></div>
+  <div class="card"><strong><a href="https://gainenull.org/nagamebana">詠花</a></strong><p class="note">詠むモノと詠うモノ</p></div>
+  <div class="card"><strong><a href="https://gainenull.org/meitanteiq">骵温</a></strong><p class="note">「ていおん」でも「たいおん」でも……</p></div>
 </div>
   
   <div id="footer"></div>
