--- a/meitanteiq.html
+++ b/meitanteiq.html
@@ -116,7 +116,7 @@
   <div class="header">骵温</div>
   <div class="note">たいおん／ていおん（どちらでも可）<br>
   お互い【Nullい体温】ということもあって、今度こそ名前が決まりました。<br>
-  探骵はてなと外峯零が共に活動するエンティティーユニットです。<br>
+  探骵はてなと外峯零が共に活動するユニットです。<br>
   存在があやふやながら、どこかで誰かの骵を探してさまよっています。
   </div>
 
@@ -186,7 +186,9 @@
 
   <div class="tab-content">
     <div class="gallery">
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/tCjQahdj9I0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/DOE1RLvNj1o" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/1rmAjeOWNMk" allowfullscreen></iframe>
       <!-- 他のサムネもここに追加 -->
     </div>
   </div>
