Update content and structure in meitanteiq.html

--- a/meitanteiq.html
+++ b/meitanteiq.html
@@ -116,19 +116,20 @@
   <div class="header">骵温</div>
   <div class="note">たいおん／ていおん（どちらでも可）<br>
   お互い【Nullい体温】ということもあって、今度こそ名前が決まりました。<br>
-  探骵はてなと外峯零が共に活動するユニットです。<br>
+  <b>探骵はてな</b>と<b>外峯零</b>のvtuberユニットです。<br>
   存在があやふやながら、どこかで誰かの骵を探してさまよっています。
   </div>
 
   <div class="tabs">
     <div class="tab">探骵はてなとは？</div>
+    <div class="tab">外峯零との関わり</div>
     <div class="tab">コラボ一覧</div>
   </div>
 
   <div class="tab-content active">
       <section class="hatena-profile">
   <h2>探骵はてな【たんてい・はてな／Tantei Hatena】</h2>
-  <p>探骵はてなは、日本各地の山間部や旧街道で語られるとされる実在する怪異。<br>特に戦前の民俗資料に散発的な記述があるとされるが、そのいずれも真偽不明であり、<br>民俗学者からは「昭和初期の怪談雑誌が発端」とする説が一般的である。</p>
+  <p>探骵はてなは、日本各地の山間部や旧街道で語られるとされる実在する怪異。<br>特に戦前の民俗資料に散発的な記述があるとされるが、そのいずれも真偽不明であり、民俗学者からは「昭和初期の怪談雑誌が発端」とする説が一般的である。</p>
 
   <h3>概要</h3>
   <p>探骵はてなは、自身の「骵（からだ）」を他者に問いただすように現れる怪異であるという。<br>
@@ -184,6 +185,26 @@
 </section>
   </div>
 
+<div class="tab-content">
+     <section class="with-gaine">
+  <h2>探骵はてな【たんてい・はてな／Tantei Hatena】</h2>
+  <p>探骵はてなは、日本各地の山間部や旧街道で語られるとされる実在する怪異。<br>特に戦前の民俗資料に散発的な記述があるとされるが、そのいずれも真偽不明であり、民俗学者からは「昭和初期の怪談雑誌が発端」とする説が一般的である。</p>
+
+  <h3>概要</h3>
+  <p>探骵はてなは、自身の「骵（からだ）」を他者に問いただすように現れる怪異であるという。<br>
+    深夜の道端や廃屋などで「わたしの骵はどこですか？」と問いかけるとされ、問われた者が返答に詰まると姿を変えると伝えられている。<br>
+    名称の「はてな」は、問いかけの語尾に常に「？」がつくことから後世につけられた俗称とされる。</p>
+
+  <h3>外見</h3>
+  <ul>
+    <li>顔を認識できない</li>
+    <li>身長は子供ほどだが、影だけは異様に長い</li>
+    <li>近づくほど全身の輪郭が曖昧になり、視界の端では細長く揺らめく</li>
+    <li>一部資料には「実体はなく、落ち葉が集まって人型に見えているだけ」とする記述もある</li>
+  </ul>
+    </div>
+  </div>
+  
   <div class="tab-content">
     <div class="gallery">
       <iframe src="https://www.youtube.com/embed/tCjQahdj9I0" allowfullscreen></iframe>
