--- a/meitanteiq.html
+++ b/meitanteiq.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>骵温</title>
+  <title>鬪ｵ貂ｩ</title>
   <style>
     body {
       margin: 0;
