Update character details and descriptions in HTML

--- a/meitanteiq.html
+++ b/meitanteiq.html
@@ -204,8 +204,8 @@
   <section id="characters">
     <h2>個別プロフィール</h2>
 
-    <article id="sotomine-rei">
-      <h3>外峯 零（そとみね れい）</h3>
+    <article id="gaine-null">
+      <h3>外峯 零（がいね ヌル）</h3>
       <ul>
         <li>種別：空白の概念体／街の軸／観測者的存在（Null）</li>
         <li>立場：人間であろうとする「存在がオカルト」</li>
@@ -244,17 +244,17 @@
       <dt>1. 「在ること」の曖昧さを抱えた存在</dt>
       <dd>
         <ul>
-          <li>外峯零：骵はあるが、<strong>Null（空白）を内包する存在</strong>。概念的に「在る無」。</li>
+          <li>外峯 零：骵はあるが、<strong>Null（空白）を内包する存在</strong>。概念的に「在る無」。</li>
           <li>探骵はてな：骵の所在が不明な存在。<strong>「骵がない／失われた」状態そのもの</strong>。</li>
-          <li>共通：人間の「ふつうの身体性」を基準としたとき、どちらも<strong>存在条件が崩れている</strong>。</li>
+          <li>共通：人間の「通常の身体性」を基準としたとき、どちらも<strong>存在条件が崩れている</strong>。</li>
         </ul>
       </dd>
 
       <dt>2. 問いと観測を扱う</dt>
       <dd>
         <ul>
-          <li>零：世界や人の在り方を「視て記録する」観測者。</li>
-          <li>はてな：対象に「骵はどこ？」と問い、認識を揺さぶる質問者。</li>
+          <li>零：世界や人の在り方を「視て記録する」<b>観測者</b>。</li>
+          <li>はてな：対象に「骵はどこ？」と問い、認識を揺さぶる<b>質問者</b>。</li>
           <li>共通：どちらも<strong>相手に「自分をどう定義するのか」を突きつける存在</strong>。</li>
         </ul>
       </dd>
@@ -276,7 +276,7 @@
       <thead>
         <tr>
           <th>項目</th>
-          <th>外峯零</th>
+          <th>外峯 零</th>
           <th>探骵はてな</th>
         </tr>
       </thead>
@@ -284,7 +284,7 @@
         <tr>
           <td>テーマ軸</td>
           <td>Null／空白／「在る」側の揺らぎ</td>
-          <td>骵／身体／「ない」側の揺らぎ</td>
+          <td>骵／幽霊／「ない」側の揺らぎ</td>
         </tr>
         <tr>
           <td>主な行為</td>
@@ -321,7 +321,7 @@
     <h3>1. 骵（からだ）の扱い</h3>
     <p>
       外峯 零は、骵を持ちながらも「存在そのものがオカルト」であり、
-      <strong>骵と存在性が一致しない</strong>。  
+      <strong>骵と存在性・所属次元が一致しない</strong>。  
       探骵はてなは、そもそも自分の骵の所在を問う存在であり、
       <strong>骵の不在／行方不明を前提とする</strong>。
     </p>
@@ -337,9 +337,9 @@
       「骵温」は、二人の存在温度を示すユニット名であり、以下の三重の意味を持つ。
     </p>
     <ul>
-      <li><strong>体温（たいおん）：</strong> 零が得た「重力」「幸せ」「生きている実感」。</li>
-      <li><strong>低温（ていおん）：</strong> はてなが漂わせる「骵不在の冷え」「存在の薄さ」。</li>
-      <li><strong>温（ぬる）：</strong> 熱でも冷たさでもない、境界のぬるさ。二人が並ぶときの距離感。</li>
+      <li><strong>体温（たいおん）：</strong>二体が失くした「重力」「幸せ」「生きている実感」。</li>
+      <li><strong>低温（ていおん）：</strong> はてなが漂わせる「骵不在の冷え」「存在の薄さ」、零が持つ身体の「平熱の低さ」。</li>
+      <li><strong>温（ぬる）：</strong> 熱でも冷たさでもない、境界のぬるさ。二体が並ぶときの距離感。</li>
     </ul>
   </section>
 
