--- a/release/index.html
+++ b/release/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>AIMOS97BIOS Update Utility</title>
+  <title>AINOS97BIOS Update Utility</title>
   <style>
     :root{
       --bg:#1b1d22;
@@ -184,7 +184,7 @@
   function bootSequence(){
     clearScreen();
     const lines = [
-      "AIMOS97BIOS Update Utility",
+      "AINOS97BIOS Update Utility",
       "----------------------------------------",
       "IDENTIFYING SELF.................OK",
       "ESTABLISHING PRESENCE............OK",
