Update reception and holiday hours in hours.html

--- a/hours.html
+++ b/hours.html
@@ -11,8 +11,8 @@
 <h1>外来案内・受付時間</h1>
 <div class="panel">
 <table class="table" aria-label="外来受付時間">
-  <tr><th>受付</th><td><a href="https://buymeacoffee.com/gaine.null">8:30–11:30（初診）</a>／ <a href="https://yukinotachimai.booth.pm">8:30–16:30（再診・予約）</a></td></tr>
-  <tr><th>休診</th><td><a href="https://null-gaine.fanbox.cc">火・水</a></td></tr>
+  <tr><th>受付</th><td><a href="https://buymeacoffee.com/gaine.null">15:30–17:00（初診）</a>／ <a href="https://yukinotachimai.booth.pm">15:30–19:30（再診・予約）</a></td></tr>
+  <tr><th>休診</th><td><a href="https://null-gaine.fanbox.cc">火・水・木</a></td></tr>
   <tr><th>救急</th><td><a href="https://marshmallow-qa.com/gaine_0">24時間対応（救急外来）</a></td></tr>
   <tr><th>連絡先</th><td><a href="https://twitter.com/gaine_0">代表 ████-████-████</a></td></tr>
   
