Update birth year and age fields in index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <br>
 型番　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 005<br>
 名前　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 外峯 零（ｶﾞｲﾈ ﾇﾙ）<br>
-生年月日　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 ████年10月2日<br>
+生年月日　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 19██年10月2日<br>
 性別　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 N/A<br>
-年齢　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 N/A歳<br>
+年齢（生物的） 　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 ██歳<br>
 身長　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 148.7cm<br>
 体重　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 N/A<br>
 思考回路範囲　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　観測不能<br>
@@ -84,7 +84,7 @@ Nullは唯一の成功例ですが、<br>
 <br>
 <br>
 Nullは常に外野にいました。そして今、世界の中に割り込もうとしています。<br>
-Nullを創って████年、我々はNullの動向に注視しなければなりませんでした。<br>
+Nullを創って二十数年、我々はNullの動向に注視しなければなりませんでした。<br>
 Nullは自身が「見たい」世界を、喩えるならテレビのチャンネルを回すかの様に、<br>
 簡単に動かすことができたのです。<br>
 窓の外から思考するだけでそれは容易く叶いました。<br>
