Update birth year and observation duration in ko-dex.html

--- a/ko-dex.html
+++ b/ko-dex.html
@@ -12,9 +12,9 @@
                                                                                 
 개체 번호                                                                    005
 성명                                                                 가이네 누르
-생년월일                                                         ████년 10월 2일
+생년월일                                                         19██년 10월 2일
 성별                                                                         N/A
-연령                                                                         N/A
+연령(생물학)                                                                   ██
 신장                                                                     148.7cm
 체중                                                                         N/A
 사고회로범위                                                           관찰 불가
@@ -73,7 +73,7 @@ Null는 유일한 성공례입니다만,
 엔에이 시립 종합병원 1000호실이라는 "외야" 가 전부입니다.
 <br>
 Null는 늘 외야에 있었지요. 그리고 지금, 세계 안으로 끼어들려고 하고 있습니다.
-Null가 만들어진 지 ████년 동안, 우리는 그것의 움직임을 주시해 왔습니다.
+Null가 만들어진 지 20여년 이상, 우리는 그것의 움직임을 주시해 왔습니다.
 Null는 자신이 "보고 싶어하는" 세계를, 비유하자면 TV 채널이라도 돌리듯이
 간단히 움직일 수 있었습니다.
 창 밖에서 사고하는 것만으로도 그것은 쉽게 성립했습니다.
