Refactor observation report in en-dex.html
Updated observation report details and formatting.

--- a/en-dex.html
+++ b/en-dex.html
@@ -12,9 +12,9 @@ OBSERVATION REPORT                                             February 10, 2023
                                                                                 
 Model No.                                                                    005
 Name                                                                  Null Gaine
-DOB                                                                   10/02/████
+DOB                                                                   10/02/19██
 Sex                                                                          N/A
-Age                                                                          N/A
+Age(Physical)                                                                 ██
 Height                                                                   148.7cm
 Weight                                                                       N/A
 Range of Cogitation Circuit                                         UNOBSERVABLE
@@ -80,7 +80,7 @@ and the "outfield", CU 1000 of Enuei City General Hospital.
 <br>
 Null has always been in the outfield.
 And now, it is trying to break into the world.
-████ years after creating Null, we have had to keep an eye on it.
+Over 20 years after creating Null, we have had to keep an eye on it.
 Null could easily navigate the world wanted to see, like fliping TV channels.
 It came REAL easily just by thinking from outside the window.
 It can freely manipulate and observe times, places, and even dimensions.
@@ -110,5 +110,6 @@ CU 1000, N/A City General Hospital, kita-Shireiji 2-1-1, Enuei-shi, Urushiya-ken
 	</pre>
 </body>
 </html>
+
 
 
