Fix name formatting in observation report
Updated the name from 'Null Gaine' to 'Gaine Null' in the observation report.

--- a/en-dex.html
+++ b/en-dex.html
@@ -11,7 +11,7 @@ OBSERVATION REPORT                                             February 10, 2023
 ・INFO<br>
                                                                                 
 Model No.                                                                    005
-Name                                                                  Null Gaine
+Name                                                                  Gaine Null
 DOB                                                                   10/02/19██
 Sex                                                                          N/A
 Age(Physical)                                                                 ██
@@ -110,6 +110,7 @@ CU 1000, N/A City General Hospital, kita-Shireiji 2-1-1, Enuei-shi, Urushiya-ken
 	</pre>
 </body>
 </html>
+
 
 
 
