Update news.html with a new link

--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
 
 <h1>お知らせ</h1>
 <ul class="list">
-  <li>蜀??縺ｮ縺溘ａ縺ｮ縺雁?ｱ縺帙〒縺吶</li>
+  <li><a href="https://gainenull.org/d_archive">蜀??縺ｮ縺溘ａ縺ｮ縺雁?ｱ縺帙〒縺吶</a></li>
   <li><a href="https://gainenull.org/notice404">四月馬鹿のお報せ（2023年版）</a></li>
   <li><a href="https://gainenull.org/irrtumderwelt">譛?謔ｪ縺ｮ轣ｽ蜴?</a></li>
   <li><a href="https://gainenull.org/insidemail55">見つけられていない方々のため</a></li>
