--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 
 <h2>よく使うページ</h2>
 <div class="grid">
-  <div class="card"><strong><a href="https://gainenull.org/hours">外来案内</a></strong><p class="note">受付 15:30–17:00（初診）／ 15:30–19:30（再診）</p></div>
+  <div class="card"><strong><a href="https://yukinotachimai.booth.pm/items/7026821">世界解体新書</a></strong><p class="note">世界取扱説明書の販売サイトへ直行します。沢山気になっている「内側のひとたち」のために。</p></div>
   <div class="card"><strong><a href="https://gainenull.org/cafepalette">カフェ・パレット</a></strong><p class="note">1階のカフェサイトに繋ぎます。</p></div>
   <div class="card"><strong><a href="https://gainenull.org/yesican">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
 </div>
