--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
     <a class="btn" href="#" onclick="go()">検索</a>
   </div>
   <script>function go(){const v=document.getElementById('q').value;location.href='search.html?q='+encodeURIComponent(v)}</script>
-  <div style="margin-top:12px">
+ <div style="margin-top:12px; margin-bottom:12px;">
     <span class="badge"><a href="https://gainenull.org/release">3周年特設</a></span>
     <span class="badge">オンライン面会</span>
     <span class="badge">24時間救急</span>
