Add playlist portal with YouTube link
Added a playlist portal with a button linking to a YouTube playlist.

--- a/meitanteiq.html
+++ b/meitanteiq.html
@@ -86,6 +86,25 @@
       border: none;
     }
 
+    .playlist-portal {
+  text-align: center;
+  margin: 1.5rem 0;
+}
+
+.playlist-portal a {
+  display: inline-block;
+  padding: 0.6rem 1.3rem;
+  border: 1px solid #666;
+  border-radius: 6px;
+  font-size: 0.98rem;
+  color: #333;
+  text-decoration: none;
+  background: #fafafa;
+}
+
+.playlist-portal a:hover {
+  background: #f1f1f1;
+}
     .bubble {
       position: fixed;
       bottom: 0;
@@ -411,6 +430,13 @@
   </div>
   
 <div class="tab-content">
+    <!-- ▶ プレイリストボタン -->
+  <div class="playlist-portal">
+    <a href="https://www.youtube.com/playlist?list=PLWFVInOtF-rRbLviDBt3f_FBaCp6TZ2jo" target="_blank">
+      ▶ プレイリストを見る
+    </a>
+  </div>
+
   <div class="gallery">
     <iframe src="https://www.youtube.com/embed/DOE1RLvNj1o" allowfullscreen></iframe>
     <iframe src="https://www.youtube.com/embed/1rmAjeOWNMk" allowfullscreen></iframe>
